[package]
name = "code-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
structopt = "0.3.26"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
mongodb = "2.5.0"
rand = "0.8.5"
argparse = "0.2.2"
reqwest = { version = "0.11", features = ["native-tls", "blocking", "rustls-tls", "json"] }
futures = "0.3"
proc-macro2 = "1.0.63"
serde_yaml = "0.9"
prettytable-rs = "0.10.0"